[tool.poetry]
name = "runapy"
version = "0.8.0"
description = "Python client for Run:ai REST API"
authors = ["Ofir Eldar <ofir.eldar.github@gmail.com>"]
license = "MIT"
packages = [
  { include = "runai" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.8.2"
urllib3 = "^2.2.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
coverage = "^7.6.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
