[tool.poetry]
name = "runapy"
version = "1.222.0"
description = "Python client for Run:ai REST API"
authors = ["Run:ai Professional Services Team"]
license = "Apache-2"
packages = [
  { include = "runai" },
]
readme = "README.md"
homepage = "https://github.com/runai-professional-services/runapy"
repository = "https://github.com/runai-professional-services/runapy"
keywords = ["runai", "kubernetes", "gpu", "orchestration"]


[tool.poetry.dependencies]
python = "^3.8"
urllib3 = ">= 1.25.3, < 3.0.0"
python-dateutil = ">= 2.8.2"
pydantic = ">= 2"
typing-extensions = ">= 4.7.1"
aiohttp = ">= 3.8.5"
aiohttp-retry = ">= 2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
tox = ">= 3.9.0"
flake8 = ">= 4.0.0"
types-python-dateutil = ">= 2.8.19.14"
mypy = ">= 1.5"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["runapy"]